Clean code in SLD-core
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>