@@ -9,12 +9,27 @@ package com.powsybl.sld.model.graphs;
 import com.fasterxml.jackson.core.JsonGenerator;
 import com.powsybl.commons.PowsyblException;
 import com.powsybl.sld.library.SldComponentTypeName;
-import com.powsybl.sld.model.cells.*;
+import com.powsybl.sld.model.cells.ArchCell;
+import com.powsybl.sld.model.cells.BusCell;
+import com.powsybl.sld.model.cells.Cell;
+import com.powsybl.sld.model.cells.ExternCell;
+import com.powsybl.sld.model.cells.InternCell;
+import com.powsybl.sld.model.cells.ShuntCell;
 import com.powsybl.sld.model.coordinate.Direction;
 import com.powsybl.sld.model.coordinate.Orientation;
 import com.powsybl.sld.model.coordinate.Point;
-import com.powsybl.sld.model.nodes.*;
+import com.powsybl.sld.model.nodes.BusNode;
+import com.powsybl.sld.model.nodes.ConnectivityNode;
+import com.powsybl.sld.model.nodes.Edge;
+import com.powsybl.sld.model.nodes.EquipmentNode;
+import com.powsybl.sld.model.nodes.FeederNode;
+import com.powsybl.sld.model.nodes.FeederType;
+import com.powsybl.sld.model.nodes.Middle2WTNode;
+import com.powsybl.sld.model.nodes.MiddleTwtNode;
+import com.powsybl.sld.model.nodes.Node;
 import com.powsybl.sld.model.nodes.Node.NodeType;
+import com.powsybl.sld.model.nodes.NodeSide;
+import com.powsybl.sld.model.nodes.SwitchNode;
 import com.powsybl.sld.model.nodes.feeders.FeederTwLeg;
 import com.powsybl.sld.util.GraphTraversal;
 import org.jgrapht.graph.Pseudograph;
@@ -51,8 +66,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
 
     private final List<Edge> edges = new ArrayList<>();
 
-    private final SortedSet<Cell> cells = new TreeSet<>(
-            Comparator.comparingInt(Cell::getNumber)); // cells sorted to avoid randomness
+    private final SortedSet<Cell> cells = new TreeSet<>(Comparator.comparingInt(Cell::getNumber)); // cells sorted to avoid randomness
 
     private final Map<Node.NodeType, List<Node>> nodesByType = new EnumMap<>(Node.NodeType.class);
 
@@ -67,8 +81,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
 
     private final Point coord = new Point(0, 0);
 
-    private final boolean forVoltageLevelDiagram;  // true if voltageLevel diagram
-    // false if substation diagram
+    private final boolean forVoltageLevelDiagram;  // true if voltageLevel diagram, false if substation diagram
 
     // by direction, max calculated height of the extern cells
     // If no extern cell found taking into account intern cells too
@@ -83,7 +96,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
 
     @Override
     public String getId() {
-        return voltageLevelInfos.getId();
+        return voltageLevelInfos.id();
     }
 
     public boolean isForVoltageLevelDiagram() {
@@ -97,7 +110,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
     public void removeUnnecessaryConnectivityNodes() {
         List<Node> fictitiousNodesToRemove = nodes.stream()
                 .filter(ConnectivityNode.class::isInstance)
-                .collect(Collectors.toList());
+                .toList();
         for (Node n : fictitiousNodesToRemove) {
             if (n.getAdjacentEdges().size() == 2) {
                 List<Node> adjNodes = n.getAdjacentNodes();
@@ -129,7 +142,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
                 .map(SwitchNode.class::cast)
                 .filter(SwitchNode::isFictitious)
                 .filter(node -> node.getAdjacentNodes().size() == 2)
-                .collect(Collectors.toList());
+                .toList();
         for (SwitchNode n : fictitiousSwitchNodesToRemove) {
             Node node1 = n.getAdjacentNodes().get(0);
             Node node2 = n.getAdjacentNodes().get(1);
@@ -213,7 +226,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
     @Override
     public VoltageLevelGraph getVoltageLevel(String voltageLevelId) {
         Objects.requireNonNull(voltageLevelId);
-        return voltageLevelId.equals(voltageLevelInfos.getId()) ? this : null;
+        return voltageLevelId.equals(voltageLevelInfos.id()) ? this : null;
     }
 
     @Override
@@ -725,7 +738,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
         if (middleNode instanceof Middle2WTNode middle2WTNode
                 && otherSideNode instanceof FeederNode otherSideFeederNode
                 && otherSideFeederNode.getFeeder() instanceof FeederTwLeg otherSideFeederTwLeg
-                && otherSideFeederTwLeg.getOwnVoltageLevelInfos().getId().equals(voltageLevelInfos.getId())) {
+                && otherSideFeederTwLeg.getOwnVoltageLevelInfos().id().equals(voltageLevelInfos.id())) {
 
             ConnectivityNode connectivityNodeA = NodeFactory.createConnectivityNode(this, feederNode.getId(), SldComponentTypeName.NODE);
             ConnectivityNode connectivityNodeB = NodeFactory.createConnectivityNode(this, otherSideNode.getId(), SldComponentTypeName.NODE);
